--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "laravel-mix": "^4.1",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
-        "vue": "^2.6.10"
+        "resolve-url-loader": "3.1.0",
+        "sass": "^1.22.9",
+        "sass-loader": "7.*",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "vue-router": "^3.1.2"
